# print-agent-rs

./: .gitignore  AI_CONTEXT.md  API_MQTT.md  Cargo.toml  PrintAgent_RS_Specs.md  README.md  implementation_plan_mobile.md
agent-windows/: Cargo.toml  build.rs
agent-windows/src/: config_loader.rs  main.rs  platform.rs  printer_win.rs
core/: Cargo.toml
core/src/: config.rs  crypto.rs  lib.rs  messages.rs  mqtt.rs  traits.rs  updater.rs
resource/icon/: app.rc
scripts/: installer.iss  pack.ps1
