[package]
name = "agent-windows"
version = "26.1.0"
edition = "2024"

[dependencies]
agent-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Printing",
    "Win32_System_Com",
] }
windows-service = "0.7"
toml = "0.8"
async-trait = "0.1.89"
tray-item = "0.10"
tauri-winrt-notification = "0.2"

[build-dependencies]
embed-resource = "2.4"
