[package]
name = "agent-core"
version = "26.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = { version = "0.25.1", features = ["url", "use-rustls", "websocket"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
reqwest = { version = "0.13.2", features = ["stream"] }
sha2 = "0.11.0"
base64 = "0.22"
toml = "0.8"
scopeguard = "1.2"
rustls = "0.23"
rustls-pki-types = "1"
aes-gcm = "0.10.3"
